syntax = "proto3";

package proto;
option go_package = "./proto";

message RedisMsg {
  int64 Op = 1;
  string ServerId = 2;
  int64 RoomId = 3;
  int64 UserId = 4;
  bytes Msg = 5;
  int64 Count = 6;
  map<string, string> RoomUserInfo = 7;
}

message RedisRoomInfo {
  int64 Op = 1;
  int64 RoomId = 2;
  int64 Count = 3;
  map<string, string> RoomUserInfo = 4;
}

message RedisRoomCountMsg {
  int64 Count = 1;
  int64 Op = 2;
}

message SuccessReply {
  int64 Code = 1;
  string Msg = 2;
}

